# combat-robot-v2

./: .gitignore  Makefile  QUICKSTART.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/ble_gamepad/: CMakeLists.txt  idf_component.yml  library.json
components/ble_gamepad/include/: ble_gamepad.h
components/ble_gamepad/src/: ble_gamepad.cpp
components/myrobot/: CMakeLists.txt  library.json
components/myrobot/include/: Buttons.h  Constants.h  Drive.h  DriveMotor.h  Drum.h  LED.h  PowerFunctions.h  PulseOutput.h  TaskManager.h  rgbLED.h
components/myrobot/src/: Buttons.cpp  Drive.cpp  DriveMotor.cpp  Drum.cpp  LED.cpp  PowerFunctions.cpp  PulseOutput.cpp  TaskManager.cpp  rgbLED.cpp
components/output_config/: CMakeLists.txt  library.json
components/output_config/include/: output_config.h
components/output_config/src/: output_config.c
docs/: 8bitdo-ble-payload-sample.jsonl  8bitdo-recorder-sample-summary.json  AGENT.md  BOARD_HARDWARE.md  BUILD.md  CHANGELOG.md  DECISIONS.md  TESTING.md  config-ui-mockup.html  physical-drive-test-plan.md  python-drive-testing-visual.html  use-case-report.md  virtual-drive-sim-plan.md
hardware/: README.md  board-v2-rev1-pcb-layout.epro2  board-v2-rev1-schematic.epro  board-v3-rev1-schematic.epro
main/: CMakeLists.txt  main.c  robot_board_api_compile_smoke.cpp  sketch.cpp
tests/: README.md  conftest.py  pre_flash_check.sh  pytest.ini  requirements.txt
tools/: bench_e2e.md  bench_e2e.py  bench_motion_profiles.py  ble_hid_recorder.py  build_and_flash.sh  dev.py  gen_web_index.py  (+5 more)
(+73 files in other folders)
